--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "npm run build && gulp serve"
   },
   "dependencies": {
+    "@material-ui/core": "^1.2.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
@@ -21,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "cors": "^2.8.4",
+    "countrystatesjs": "0.0.12",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
